@@ -3,6 +3,7 @@
  * improve stability
  * admin/ config changed. please update accordingly
  * PHP 5.3.14 is unstable. Please upgrade to new version. You have been warned
+ * fixed __FILE__ __DIR__ handling for moved/hardlinked files (set "xcache.experimental = on" to eanble this fix)
 
 2.0.0 2012-04-20
 ========
